client/stylesheets/base/_root.scss
//  Root
//  ====

@import "~sass-toolkit/stylesheets/toolkit/kickstart";

html {
  font-family: $base-font-family;
  text: 400 $text-color 1.5 $base-font-size;
  -webkit-font-smoothing: antialiased;
  &::after { @include share-breakpoints($susy-media); }
}

body {
  display: flex;
  flex-flow: column nowrap;
  background-color: #fff;
  min-height: 100vh;
}

.page-wrapper {
  flex: 1;
  min-height: r(20);
  background-color: $brown-light;
  @each $type in $characters {
    &.#{$type} { background-color: theme($type); }
  }

  &.enable-full-billboard {
    display: flex;
    flex-flow: column nowrap;
  }
}

main[role="main"] {
  padding-bottom: r(10);

  .enable-full-billboard & {
    padding-bottom: 0;
    flex: 1;
    display: flex;
    flex-flow: column nowrap;
  }
}

// Turbolinks
html.turbolinks-progress-bar::before {background-color: $nprogress-color !important;}

// Allow only vertical resizing of textareas.
textarea {resize: vertical;}
img, svg {vertical-align: middle;}
img[data-sizes="auto"]:not(.slick-slide) {
  display: block;
  size: 100% auto;
}

.cf {clear: fix;}
.clr{clear: both;}

.text-center {text-align: center;}
.text-right {text-align: right;}

// Hide from both screenreaders and browsers: h5bp.com/u
.hidden { @include Hidden; }

